# Myblog

./: .gitignore  pyproject.toml  pytest.ini  run_flake8.sh  setup.cfg
app/: manage.py  pyproject.toml
app/account/: admin.py  apps.py  backends.py  forms.py  managers.py  models.py  tasks.py  urls.py  views.py
app/account/migrations/: 0001_initial.py  0002_account_confirm_email.py  0003_rename_birth_date_account_birth_day_and_more.py  0004_alter_account_username.py
app/account/tests/: __init__.py  test_admin.py  test_apps.py  test_backend.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
app/accounts/: admin.py  models.py  urls.py  views.py
app/accounts/tests/: test_model.py
app/myblog/: __init__.py  asgi.py  celery.py  settings.py  test.py  urls.py  wsgi.py
app/services/: models_functions.py  tasks_funtions.py
app/templates/: base.html  footer.html  header.html  index.html  navigation.html
app/templates/account/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile_detail.html  profile_edit.html  signup.html
app/tests/: conftest.py
myblog/: settings.py
