[tool.poetry]
name = "myblog"
version = "0.1.0"
description = ""
authors = ["TarhanovM <tarmd@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"
pytest-django = "^4.10.0"
pillow = "^11.1.0"
flake8 = "^7.1.2"
wemake-python-styleguide = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.myblog.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]