[tool.poetry]
name = "myblog"
version = "0.1.0"
description = ""
authors = ["TarhanovM <tarmd@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"
pytest-django = "^4.10.0"
pillow = "^11.1.0"
flake8 = "^7.1.2"
wemake-python-styleguide = "^1.0.0"
django-debug-toolbar = "^5.0.1"
pytils = "^0.4.1"
black = "^25.1.0"
celery = "^5.4.0"
darglint = "^1.8.1"
flake8-annotations-complexity = "^0.0.8"
flake8-builtins = "^2.5.0"
flake8-bugbear = "^24.12.12"
flake8-coding = "^1.3.2"
flake8-comprehensions = "^3.16.0"
flake8-commas = "^4.0.0"
mccabe = "^0.7.0"
flake8-docstrings = "^1.7.0"
pycodestyle = "^2.12.1"
flake8-eradicate = "^1.5.0"
flake8-logging-format = "^2024.24.12"
flake8-isort = "^6.1.2"
flake8-broken-line = "^1.0.0"
pep8-naming = "^0.14.1"
flake8-string-format = "^0.3.0"
flake8-quotes = "^3.4.0"
flake8-pep3101 = "^2.1.0"
flake8-bandit = "^4.1.1"
flake8-print = "^5.0.0"
flake8-debugger = "^4.1.2"
redis = "^5.2.1"
flower = "^2.0.1"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.myblog.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.black]
line-length = 80